<resources>
    <string name="app_name">Preference</string>


    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->

    <string name="show_bass_label">Show Bass</string>
    <string name="show_bass_key" translatable="false">show_bass</string>

    <string name="show_mid_range_label">Show Mid Range</string>
    <string name="show_mid_range_key" translatable="false">show_mid_range</string>

    <string name="show_treble_label">Show Treble</string>
    <string name="show_treble_key" translatable="false">show_treble</string>


    <!--Summary Show / hidden-->
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">hidden</string>


    <string name="pref_color_label">Shape Color</string>
    <string name="pref_color_key" translatable="false">color_key</string>

    <string name="pref_color_red_label">Red</string>

    <string name="pref_color_blue_label">Blue</string>

    <string name="pref_color_green_label">Green
    </string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="settings">Settings</string>
    <string name="shape_color_summary">Shape and Background Color</string>
</resources>
